Added instructions and title. Changed file name: game.js ==> ArrowDodge.js

--- a/project_1.html
+++ b/project_1.html
@@ -10,17 +10,19 @@
 
 	<body>
 
-		<h1>Game</h1>
+		<h1>Arrow Dodger</h1>
 			<div id="gameport"></div>
 
 			<h1>Instructions</h1>
-			<p>How to play my game..</p>
+			<p>Press w to jump over red arrows</p>
+			<p>Press s to duck under green arrows</p>
+			<p>Press f to restart</p>
 
 			<h1>Comments</h1>
-			Disqus code goes here..
+			
 
 			<script src="pixi.min.js"></script>
-			<script src="game.js"></script>
+			<script src="ArrowDodge.js"></script>
 
 			<div id="disqus_thread"></div>
 
